# witnessd-cli

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml  update-package-managers.yml
packaging/linux/appimage/: linuxdeploy.yaml  witnessd.desktop
packaging/linux/debian/: conffiles  postinst  witnessd-ibus.install
packaging/linux/rpm/: witnessd.fc  witnessd.te
packaging/linux/scripts/: build-rpm.sh  test-packages.sh
packaging/linux/systemd/: environment  witnessd-ibus.service  witnessd-user.service  witnessd.service
rust/witnessd-cli/: Cargo.toml
rust/witnessd-cli/src/: main.rs  smart_defaults.rs
rust/witnessd-cli/tests/: cli_e2e.rs
src/: main.rs  smart_defaults.rs
tests/: cli_e2e.rs
